# Dissertation

./: ROFCombine_m_un_pairs_clean.txt  cls_train.txt  crop_test.py  train.py  txt_annotaion.py
ROF/: glasses_pairs.txt  mask_pairs.txt  neutral_pairs.txt
logs/loss_2022_07_15_16_34_39/: events.out.tfevents.1657899279.LAPTOP-VKGBGKLD.18656.0
logs/loss_2022_07_15_16_38_14/: events.out.tfevents.1657899494.LAPTOP-VKGBGKLD.13308.0
logs/loss_2022_07_15_16_39_23/: events.out.tfevents.1657899563.LAPTOP-VKGBGKLD.29168.0
logs/loss_2022_07_15_16_40_08/: events.out.tfevents.1657899608.LAPTOP-VKGBGKLD.3828.0
logs/loss_2022_07_15_16_48_21/: events.out.tfevents.1657900101.LAPTOP-VKGBGKLD.24660.0
logs/loss_2022_07_15_16_48_34/: events.out.tfevents.1657900114.LAPTOP-VKGBGKLD.26724.0
logs/loss_2022_07_15_16_50_23/: events.out.tfevents.1657900223.LAPTOP-VKGBGKLD.12612.0
logs/loss_2022_07_15_16_52_41/: events.out.tfevents.1657900361.LAPTOP-VKGBGKLD.27248.0
logs/loss_2022_07_15_16_55_09/: events.out.tfevents.1657900509.LAPTOP-VKGBGKLD.4212.0
logs/loss_2022_07_15_16_56_28/: events.out.tfevents.1657900588.LAPTOP-VKGBGKLD.14484.0
logs/loss_2022_07_15_16_59_34/: events.out.tfevents.1657900774.LAPTOP-VKGBGKLD.4560.0
logs/loss_2022_07_15_17_00_13/: events.out.tfevents.1657900813.LAPTOP-VKGBGKLD.16276.0
logs/loss_2022_07_15_17_02_46/: events.out.tfevents.1657900966.LAPTOP-VKGBGKLD.16824.0
nets/: arcface.py  mobilefacenet.py
utils/: callback.py  dataloader.py  utils.py  utils_fit.py  utils_metrics.py
代码/sunglasses_code/batch_process_test/: CMakeLists.txt  main.cpp
(+65 files in other folders)
